--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,44 @@
-<% provide(:title, 'home') %>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript">
+$(function () {
+    $("#upload").bind("click", function () {
+        var regex = /^([a-zA-Z0-9\s_\\.\-:])+(.csv|.txt)$/;
+        if (regex.test($("#fileUpload").val().toLowerCase())) {
+            if (typeof (FileReader) != "undefined") {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+
+                    var table = $("<table />");
+                    var rows = e.target.result.split("\n");
+                 	var result=rows;
+                 	table.append(rows.length);
+                    var haha;
+                    var url = "https://maps.googleapis.com/maps/api/distancematrix/json?origins=Barranquilla+Atlantico|Bogota+Antioquia&destinations=Barranquilla+Atlantico|Bogota+Antioquia&mode=driving&language=es-ES&key=AIzaSyDiQ-ZsoupZfmP-CIz9lrP_AJySr3YYs7k"; 
+                    $.getJSON( url, function( data ) {
+                        //haha = data.destination_addresses;
+                        console.log("algo");
+                        console.log(haha);
+                    });
+                    for (var i = 0; i < rows.length; i++) {
+                        var row = $("<tr />");
+                        row.append(rows[i])
+                        table.append(row);
+                    }
+                    $("#dvCSV").html('');
+                    $("#dvCSV").append(table);
+                }
+                reader.readAsText($("#fileUpload")[0].files[0]);
+            } else {
+                alert("This browser does not support HTML5.");
+            }
+        } else {
+            alert("Please upload a valid CSV file.");
+        }
+    });
+});
+</script>
+<input type="file" id="fileUpload" />
+<input type="button" id="upload" value="Upload" />
+<hr />
+<div id="dvCSV">
+</div>
